<resources>
    <string name="app_name">MovieKatalog2</string>
    <string name="tab_text_1">Film</string>
    <string name="tab_text_2">Acara Tv</string>
    <string name="This_is_tab">Ini Adalah Tab</string>
    <string name="name_movie">Judul Film</string>
    <string name="desc">Deskripsi Film</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_8">8</string>
    <string name="judul" translatable="false">Judul</string>
    <string name="txt_Genre">Kategori</string>
    <string name="txt_rating">Penilaian</string>
    <string name="txt_sinposis">Sinopsis</string>
    <string name="change_language_settings">Ubah Pengaturan Bahasa</string>
    <string-array name="data_name">
        <item>Sky Castle</item>
        <item>Arthdal Chronicles</item>
        <item>Vagabond</item>
        <item>When The Camellia Blooms</item>
        <item>Hotel Del Luna</item>
        <item>Search: WWW</item>
        <item>The Fiery Priest</item>
        <item>Kingdom</item>
        <item>Chief of Staff 1 dan 2</item>
        <item>Romance is a Bonus Book</item>
    </string-array>
    <string-array name="data_genre">
        <item>Drama</item>
        <item>Fantasi,Romantis</item>
        <item>Mata-Mata,Thriller</item>
        <item>Romantis,Komedi</item>
        <item>Romansa Romantis</item>
        <item>Romantis</item>
        <item>Komedi</item>
        <item>Thriller,Horror</item>
        <item>Drama Politik</item>
        <item>Komedi Romantis</item>
    </string-array>
    <string-array name="data_rating">
        <item>8.8</item>
        <item>7.7</item>
        <item>8.7</item>
        <item>8.0</item>
        <item>8.4</item>
        <item>8.7</item>
        <item>8.6</item>
        <item>8.2</item>
        <item>8.3</item>
        <item>8.7</item>

    </string-array>
    <string-array name="data_desc">
        <item>Ada banyak drama tentang siswa sekolah menengah, tapi hanya sedikit yang mengatasi beban siswa Korea dengan cara yang menarik seperti Sky Castle. \n\n Drama ini menempatkan beberapa keluarga kaya di bawah mikroskop, mengungkapkan semua fasad dan skema rumit yang mereka bangun untuk memastikan mereka tidak pernah kehilangan muka dengan mengharuskan anak-anak mereka masuk ke salah satu universitas paling bergengsiSementara banyak dari kita mungkin jauh dari dunia para elit, kamu tidak perlu menjadi kaya untuk memahami bagaimana terperangkapnya karakter dalam "SKY Castle", budak kehidupan materialistis dan megah di mana di bawah hampir setiap tindakan terletak sebuah motif tersembunyi.</item>
        <item>Arthdal Chronicles bertempat di kota mitos Arthdal, ibu kota kerajaan Gojoseon. \n\n Ini menceritakan kisah para pahlawan yang membuat legenda mereka sendiri di tanah kuno yang disebut Arth. \n\n Song Joong Ki memerankan Eun Seom, putra bangsawan Asahon (Choo Ja Hyun) dan anggota suku Wahan. Kim Ji Won akan memerankan Tan Ya, penjaga dan dukun suku Wahan. \n\n Sementara itu, Jang Dong Gun akan memainkan peran Ta Gon, putra seorang pemimpin suku.</item>
        <item>Vagabond adalah drama mata-mata yang menceritakan tentang seorang pria yang mengungkap kebenaran gelap dan korupsi tersembunyi di balik kecelakaan pesawat misterius. \n\n Lee Seung Gi memainkan peran Cha Dal Gun, seorang stuntman yang mengagumi Jackie Chan dan mimpi mendominasi industri film aksi. \n\n Suzy akan membintangi drama sebagai Go Hae Ri, seorang agen rahasia yang bekerja menyamar untuk Kedutaan Besar Korea di Maroko. \n\n Keduanya secara tak terduga dipertemukan setelah sebuah kecelakaan pesawat, dan mereka bersatu untuk mengungkap kebenaran tersembunyi.</item>
        <item>When the Camellia Blooms menceritakan tentang kisah hidup Dong-baek (Gong Hyo-jin) sebagai seorang orang tua tunggal dari satu anak laki-laki di daerah baru. Di sana, ia membuka bisnis yang tak diduga warga sekitar. \n\n Dong-baek tak hanya memiliki hubungan dengan Yong-sik. Ia pun terlibat dalam permasalahan rumit dengan seorang pria jahat. \n\n Aktor Kim Ji-suk turut meramaikan drama When the Camellia Blooms. Ia berperan sebagai Kang Jong-ryeol, seorang atlet yang pernikahannya bermasalah. \n\n Di awal episode pertama, sutradara Cha Young-hoon tak ragu menunjukkan misteri dan kekelaman drama ini. Namun hanya dalam hitungan menit, suasana langsung berubah menyenangkan dengan menunjukkan aksi Kang Ha-neul yang membuat penonton gemas. \n\n </item>
        <item>Bergenre romantis, horor, dan fantasi, Hotel Del Luna menceritakan kisah seorang pengusaha hotel elit bernama Goo Chan Sung (diperankan oleh Yeo Jin Goo) yang akhirnya menjalankan hotel berhantu. Hotel berhantu ini dimiliki oleh Jang Man Wol (diperankan oleh IU) yang cantik tapi pemarah. Jang Man Wol ini hidup di bawah kutukan sebagai hukuman atas kesalahan masa lalunya.</item>
        <item>Search: WWW adalah drama romantis yang mengisahkan kehidupan cinta dari tiga wanita karier yang bekerja di perusahaan mesin pencari teratas Korea. \n\n Ini merupakan drama comeback Im Soo Jung setelah 2 tahun. \n Im Soo Jung akan berperan sebagai Bae Ta Mi, seorang manajer strategis di situs portal Korea No.1 Unicorn. \n Sementara Jang Ki Yong akan berperan sebagai Park Mo Gun, seorang komposer jenius. \n\n Drama ini romantis ini sukses membuat penonton terhanyut dengan kecerdasan dan chemistry para pemainnya hingga diganjar rating tinggi sebanyak 4 persen untuk episode terakhirnya.</item>
        <item>The Fiery Priest menceritakan kisah tentang pendeta pemarah dan detektif lemah yang bergabung untuk menyelesaikan kasus pembunuhan seorang pendeta tua. Drama ini ditulis oleh penulis Park Jae Bum yang menulis drama seperti Chief Kim dan Good Doctor, dan disutradarai oleh Lee Myung Woo yang mengarahkan drama seperti Whisper dan Punch.Kim Nam Gil memerankan pendeta Katolik Kim Hae Il, yang memiliki Gangguan Rasa Marah, Gangguan Obsesif-Kompulsif, dan Gangguan Paska-Trauma Pahit. Cara bicaranya yang sinis dan pesimistis biasanya membuat orang-orang di sekitarnya mati rasa. Namun, keterampilan analitis, wawasan, dan penilaiannya terhadap sesama manusia sangat tajam dan akurat.Kim Hae Il sebenarnya adalah agen khusus top pemerintah. Dia berada di tim pasukan khusus anti-terorisme dari National Intelligence Service 10 tahun yang lalu.Kim Sung Kyun akan berperan sebagai Goo Dae Young, seorang detektif yang bekerja di Departemen Kejahatan Kekerasan Kantor Polisi Gudam. Dia tidak ingin terlihat lemah, jadi dia suka menggertak.Goo Dae Young adalah pria yang berhati lembut yang suka nangis. Meski dulunya tegas, dia menjadi pengecut setelah rekannya meninggal tiga tahun lalu.Honey Lee akan berperan sebagai jaksa Park Kyung Sun di Kantor Kejaksaan Distrik Pusat Seoul. Dia terkenal patuh, cantik dan pintar.</item>
        <item>Kingdom adalah drama thriller misteri berjumlah 6 episode dengan latar era Joseon. Bersetting di era kerajaan, Kingdom berkisah tentang seorang pangeran yang mencoba menyelamatkan orang-orang dari epidemi atau wabah zombie yang mewabah di istana dan sekitarnya.Antisipasi untuk musim kedua segera meroket karena kengerian klimaks yang ditayangkan di akhir season pertama. Seri ini telah menyelesaikan syuting untuk musim kedua, yang akan tayang perdana pada tahun 2020.</item>
        <item>Drama yang tayang perdana pada 14 Juni 2019 ini bercerita tentang para politisi dan menunjukkan persaingan licik dan berbahaya yang terjadi jauh dari mata publik. Chief of Staff dibintangi Lee Jung Jae, Shin Min Ah, Jung Jin Young, Kim Kap Soo, Jung Woong In, Lee Elijah, dan Kim Dong Jun. Mereka menerima banyak pujian karena penggambaran realistisnya tentang politik.Banyak pemirsa menyatakan kekecewaannya bahwa drama itu berakhir hanya dalam 10 episode. Nggak heran, Chief of Staff 2 yang tayang bulan November 2019 langsung dibanjiri antusiasme tinggi yang berakhir dengan rating memuaskan 5,3 persen.</item>
        <item>Romance is a Bonus Book atau Romance Supplement mengambil setting di sebuah perusahaan penerbitan dan menceritakan kisah hangat dari mereka yang membuat buku. Antisipasi pemirsa terhadap drama ini cukup tinggi karena ini akan menjadi drama comeback Lee Na Young dalam sembilan tahun dan drama terakhir Lee Jong Suk sebelum wamil.Kang Dan Yi adalah copywriter yang berbakat dan terkenal tetapi sering diabaikan. Cha Eun Ho adalah pemimpin redaksi termuda dari perusahaan penerbitan Gyeo Ru dan seorang idola dunia sastra. Benih-benih cinta mulai tumbuh saat Kang Dan Yi mencoba mendapatkan kesempatan kedua dalam kariernya.</item>
    </string-array>
    <string-array name="data_nama_movie">
        <item>Captain Marvel</item>
        <item>Avangers End Game</item>
        <item>Toy Story 4</item>
        <item>The Lion King</item>
        <item>Spider Man Far From Home </item>
        <item>Aladdin</item>
        <item>Godzilla: King of the Monsters</item>
        <item>Doctor Sleep</item>
        <item>Terminator: Dark Fate</item>
        <item>Charlies Angels</item>
    </string-array>
    <string-array name="data_genre_movie">
        <item>Aksi, PahlawanSuper, Fantasi</item>
        <item>Aksi,Petualangan,Fiksi Ilmiah</item>
        <item>Animasi,Petualangan,Komedi,Fantasi</item>
        <item>Animasi,Petualangan,Drama,Musikal</item>
        <item>Aksi,Petualangan,Fiksi Ilmiah</item>
        <item>Petualangan,Fantasi,Musikal,Romantis</item>
        <item>Aksi,Petualangan,Fantasi,Fiksi Ilmiah</item>
        <item>Drama,Fantasi,Horror,Thriller</item>
        <item>Aksi,Petualangan,Fiksi Ilmiah</item>
        <item>Aksi,Petualangan,Komedi</item>
    </string-array>
    <string-array name="data_ratig_movie">
        <item>7.8</item>
        <item>8.5</item>
        <item>7.9</item>
        <item>6.9</item>
        <item>7.6</item>
        <item>7.0</item>
    <item>6.1</item>
    <item>7.5</item>
    <item>6.3</item>
    <item>4.2</item>

</string-array>
</resources>