<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ImageView
        android:id="@+id/img_photo"
        android:layout_width="105dp"
        android:layout_height="154dp"
        android:padding="15dp"
        android:scaleType="fitXY"
        android:src="@drawable/romance_is" />

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_toEndOf="@id/img_photo"
        android:layout_marginTop="20dp"
        android:text="@string/name_movie"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/txt_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_name"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/img_photo"
        android:text="@string/txt_Genre"
        android:textSize="14sp"/>


    <TextView
        android:id="@+id/txt_desc"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:layout_below="@id/txt_genre"
        android:layout_toRightOf="@id/img_photo"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/desc"/>


</RelativeLayout>