<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/item_poster"
                    android:layout_width="160dp"
                    android:layout_height="200dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    app:layout_constraintEnd_toStartOf="@id/guideline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@drawable/romance_is"/>

                <TextView
                    android:id="@+id/txtNama"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="12dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/judul"
                    android:textSize="14sp"
                    android:textColor="@android:color/holo_red_light"
                    app:layout_constraintStart_toStartOf="@id/guideline"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/item_nama_movie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_below="@id/txtNama"
                    app:layout_constraintStart_toStartOf="@id/guideline"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintTop_toBottomOf="@id/txtNama"
                    android:text="@string/name_movie"
                    android:textSize="12sp"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/txtGenre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="12dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/txt_Genre"
                    android:textSize="14sp"
                    android:textColor="@android:color/holo_red_light"
                    app:layout_constraintStart_toStartOf="@id/guideline"
                    app:layout_constraintTop_toBottomOf="@id/item_nama_movie"/>

                <TextView
                    android:id="@+id/item_nama_genre"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/name_movie"
                    android:textColor="@android:color/black"
                    android:textSize="12sp"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintStart_toStartOf="@id/guideline"
                    app:layout_constraintTop_toBottomOf="@id/txtGenre" />

                <TextView
                    android:id="@+id/txtRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="12dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/txt_rating"
                    android:textSize="14sp"
                    android:textColor="@android:color/holo_red_light"
                    app:layout_constraintStart_toStartOf="@id/guideline"
                    app:layout_constraintTop_toBottomOf="@id/item_nama_genre"/>

                <ImageView
                    android:id="@+id/item_star"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:src="@drawable/star"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="@id/guideline"
                    app:layout_constraintTop_toBottomOf="@id/txtRating"/>

                <TextView
                    android:id="@+id/item_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintLeft_toRightOf="@id/item_star"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintTop_toBottomOf="@id/txtRating"
                    android:text="@string/name_movie"
                    android:textSize="12sp"
                    android:textColor="@android:color/black" />


                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="190dp" />

                <TextView
                    android:id="@+id/txtSinposis"
                    android:layout_width="358dp"
                    android:layout_height="26dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/txt_sinposis"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/item_poster" />


                <TextView
                    android:id="@+id/item_deskirpsi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:padding="8dp"
                    android:text="@string/desc"
                    android:textColor="@android:color/black"
                    android:textSize="13sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtSinposis" />

        </androidx.constraintlayout.widget.ConstraintLayout>





</ScrollView>